--- a/client/app/recipes/recipe-info-form-tmpl.html
+++ b/client/app/recipes/recipe-info-form-tmpl.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div class="form-group col-md-12">
     <div class="row">
         <label class="col-md-1 control-label">Name</label>
         <div class="col-md-4">
