--- a/client/app/recipes/calculator/calculator.html
+++ b/client/app/recipes/calculator/calculator.html
@@ -5,4 +5,5 @@
     <h3>Total Vol: {{calculator.calcService.totalVol | number }}</h3>
     <h3>Mash Vol: {{calculator.calcService.mashVol | number }}</h3>
     <h3>Sparge Vol: {{calculator.calcService.spargeVol | number }}</h3>
+    <h3>Pre Boil Vol: {{calculator.calcService.preBoilVol | number }}</h3>
 </div>
